--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,4 +14,8 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="Theme.StyleLibrary.Button" parent="Widget.MaterialComponents.Button">
+        <item name="android:textSize">20sp</item>
+    </style>
+
 </resources>
