--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.StyleLibrary" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/primary_orange</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -15,7 +15,17 @@
     </style>
 
     <style name="Theme.StyleLibrary.Button" parent="Widget.MaterialComponents.Button">
-        <item name="android:textSize">20sp</item>
+        <item name="minHeight">50dp</item>
+        <item name="minWidth">50dp</item>
+        <item name="backgroundTint">@color/primary_orange</item>
+        <item name="cornerRadius">8dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Theme.StyleLibrary.ButtonWhite" parent="Theme.StyleLibrary.Button">
+        <item name="android:textColor">@color/primary_blue</item>
+        <item name="backgroundTint">@color/white</item>
     </style>
 
 </resources>
