--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary_orange">#FF5722</color>
+    <color name="second_orange">#E64A19</color>
     <color name="primary_blue">#039BE5</color>
 </resources>
