--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.StyleLibrary" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_orange</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">@color/second_orange</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -12,11 +12,12 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="Theme.StyleLibrary.Button" parent="Widget.MaterialComponents.Button">
         <item name="minHeight">50dp</item>
-        <item name="minWidth">50dp</item>
+        <item name="minWidth">300dp</item>
         <item name="backgroundTint">@color/primary_orange</item>
         <item name="cornerRadius">8dp</item>
         <item name="android:textAlignment">center</item>
@@ -27,5 +28,6 @@
         <item name="android:textColor">@color/primary_blue</item>
         <item name="backgroundTint">@color/white</item>
     </style>
+
 
 </resources>
