--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,9 +15,17 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="Theme.StyleLibrary.TextView" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Theme.StyleLibrary.EditText" parent="Widget.Design.TextInputLayout">
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="Theme.StyleLibrary.Button" parent="Widget.MaterialComponents.Button">
-        <item name="minHeight">50dp</item>
-        <item name="minWidth">300dp</item>
+        <item name="android:height">50dp</item>
+        <item name="android:width">400dp</item>
         <item name="backgroundTint">@color/primary_orange</item>
         <item name="cornerRadius">8dp</item>
         <item name="android:textAlignment">center</item>
